Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5772

[GLib][Plasma][CUDA] Plasma::Client#refer_object test is failed

    XMLWordPrintableJSON

Details

    Description

      /home/kou/work/cpp/arrow.kou/c_glib/test/plasma/test-plasma-client.rb:75:in `block (2 levels) in <class:TestPlasmaClient>'
      /tmp/local/lib/ruby/gems/2.7.0/gems/gobject-introspection-3.3.6/lib/gobject-introspection/loader.rb:533:in `block in define_method'
      /tmp/local/lib/ruby/gems/2.7.0/gems/gobject-introspection-3.3.6/lib/gobject-introspection/loader.rb:616:in `invoke'
      /tmp/local/lib/ruby/gems/2.7.0/gems/gobject-introspection-3.3.6/lib/gobject-introspection/loader.rb:616:in `invoke'
      Error: test: options: GPU device(TestPlasmaClient::#create):
        Arrow::Error::Io: [plasma][client][refer-object]: IOError: Cuda Driver API call in ../src/arrow/gpu/cuda_context.cc at line 156 failed with code 208: cuIpcOpenMemHandle(&data, *handle, CU_IPC_MEM_LAZY_ENABLE_PEER_ACCESS)
        In ../src/arrow/gpu/cuda_context.cc, line 341, code: impl_->OpenIpcBuffer(ipc_handle, &data)
        In ../src/plasma/client.cc, line 586, code: context->OpenIpcBuffer(*object->ipc_handle, &obj_handle->ptr)
      

      Attachments

        Activity

          People

            kou Kouhei Sutou
            kou Kouhei Sutou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 10m
                1h 10m