ARROW-5772: [GLib][Plasma][CUDA] Fix a bug that data can't be got

We need to keep a reference to std::shared_ptr<arrow::Buffer> returned
by plasma::Client::Get(). If the returned buffer is destructed, we
can't get data from the returned buffer.

Without this change, we just keep a reference to a
std::shared_ptr<arrow::cuda::CudaBuffer> returned from
arrow::cuda::CudaBuffer::FromBuffer().