c_glib/arrow-glib/buffer.cpp
@@ -142,7 +142,7 @@ garrow_buffer_class_init(GArrowBufferClass *klass)
 
   spec = g_param_spec_pointer("buffer",
                               "Buffer",
-                              "The raw std::shared<arrow::Buffer> *",
+                              "The raw std::shared_ptr<arrow::Buffer> *",
                               static_cast<GParamFlags>(G_PARAM_WRITABLE |
                                                        G_PARAM_CONSTRUCT_ONLY));
   g_object_class_install_property(gobject_class, PROP_BUFFER, spec);
