c_glib/test/plasma/test-plasma-client.rb
@@ -63,7 +63,6 @@ class TestPlasmaClient < Test::Unit::TestCase
 
     test("options: GPU device") do
       omit("Arrow CUDA is required") unless defined?(::ArrowCUDA)
-      omit("TODO: Fix this failure: ARROW-5772")
 
       gpu_device = 0
 
